k8s/openfaas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: openfaas
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.openfaas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
